# MinesweeperSFML

./: .gitignore  CMakeLists.txt  buildAndRun.sh
include/: Button.h  Game.h
src/: Button.cpp  Game.cpp  main.cpp
